<resources>
    <string name="app_name">AiSee</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--   &lt;!&ndash; Preference Titles &ndash;&gt;
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    &lt;!&ndash; Messages Preferences &ndash;&gt;
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    &lt;!&ndash; Sync Preferences &ndash;&gt;
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    -->

    <!-- Preference Titles -->
    <string name="common">通用</string>
    <string name="debug_header">设备信息(debug)</string>
    <string name="network">网络</string>
    <string name="back_to_default">恢复默认</string>

    <string name="volume_lock_title">音量锁定</string>
    <string name="http_base_url">HTTP请求地址</string>
    <string name="http_base_url_default">https://aisee.idealbroker.cn</string>
    <string name="ws_base_url">WebSocket请求地址</string>
    <string name="ws_base_url_default">wss://aisee.idealbroker.cn</string>
    <!-- Preferences -->
    <string name="volume_lock_summary">锁定系统音量大小，防止静音状态下听不到语音播报</string>


</resources>